Fixed scroll to section (prevent overlap with title), aligned header elements

--- a/css/index.header-section.css
+++ b/css/index.header-section.css
@@ -47,6 +47,8 @@
         justify-content: space-evenly;
         align-items: center;
         color: var(--title-color);
+        margin: 0;
+        padding-top: 5px;
         li {
             list-style-type: none;
         }
@@ -77,6 +79,7 @@
 
 .header__social-media {
     display: none;
+    padding-top: 15px;
 
     @media (min-width: 1130px) {
         display: flex;
