--- a/css/index.section-contacts.css
+++ b/css/index.section-contacts.css
@@ -1,5 +1,4 @@
 .contacts {
-    margin: 80px 0;
     text-align: center;
 }
 
@@ -27,7 +26,7 @@
     font-size: 45px;
     line-height: 55px;
     font-weight: 400;
-    padding-bottom: 10px;
+    padding: 100px 0 10px 0;
 }
 
 .contacts_subtitle{
