--- a/css/index.section-features.css
+++ b/css/index.section-features.css
@@ -1,5 +1,4 @@
 .features {
-    margin: 80px 0;
     text-align: center;
 }
 
@@ -9,8 +8,7 @@
     font-size: 45px;
     line-height: 55px;
     font-weight: 400;
-    padding-bottom: 10px;
-
+    padding: 100px 0 10px 0;
 }
 
 .features_subtitle {
