--- a/css/index.section-product.css
+++ b/css/index.section-product.css
@@ -20,6 +20,7 @@
     line-height: 55px;
     font-weight: 400;
     padding-bottom: 10px;
+    padding: 100px 0 10px 0;
 
     @media (min-width: 1130px) {
         text-align: left;
